# basecamp

./: .coderabbit.yaml  .dockerignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PROMPT.md  MIGRATION_PLAN.md  Makefile  README.md  REVIEW.md  biome.json  cli.py  extension.ts  install.py  package-lock.json  package.json  projects.json.example  pyproject.toml  tsconfig.json
basecamp-cli/: pyproject.toml
basecamp-cli/src/basecamp/: constants.py  main.py  settings.py
basecamp-cli/src/basecamp/cli/: __init__.py  config.py  project.py  setup.py
basecamp-cli/src/basecamp/companion/: __init__.py  analysis.py  analyzer.py  app.py  cycles.py  daemon.py  diff.py  (+2 more)
basecamp-cli/src/basecamp_cli/: __init__.py  constants.py  exceptions.py  installer.py  settings.py  ui.py  utils.py
basecamp-cli/tests/basecamp/: conftest.py  fake_daemon_agent.py  test_companion_analysis.py  test_companion_analyze_cli.py  test_companion_analyzer.py  test_companion_app.py  test_companion_daemon.py  test_companion_dashboard.py  test_companion_diff.py  test_companion_llm.py  test_companion_snapshot.py  test_companion_source.py  test_daemon_app.py  test_daemon_dispatch.py  test_daemon_frames.py  test_daemon_store.py  test_daemon_uds.py  test_settings.py
cli/: pyproject.toml
cli/src/basecamp/: constants.py  exceptions.py  main.py  settings.py  ui.py
cli/src/observer/: constants.py  exceptions.py
cli/tests/basecamp/: test_launch.py  test_settings.py
cli/tests/observer/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_data.py  test_indexing.py  test_ingestion.py  test_model_resolver.py  test_parser.py  test_recall.py  test_registration.py  test_search_engine.py
core/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
core/config/: pyproject.toml
core/config/tests/: test_paths.py  test_settings.py
core/pi/: README.md  index.ts  package-lock.json  package.json
core/py/tests/: test_files.py  test_settings.py
core/src/core/: constants.py  exceptions.py  handoff.py  logseq.py  main.py  settings.py  terminal.py  ui.py  utils.py
core/tests/: conftest.py  test_claude_settings.py  test_completions.py  test_dispatch.py  test_execute.py  test_log.py  test_logseq.py  test_path_launch.py  test_plan.py  test_reflect.py  test_settings.py  test_task.py  test_terminal.py  test_tmux_launch.py  test_worker.py  test_worktrees.py
core/ts/: index.ts
core/ts/capabilities/: skill.ts
core/ts/escalate/: dialog.ts  index.ts  tool.ts
core/ts/model-aliases/: commands.ts  config.ts
core/ts/platform/: agent-identity.ts  catalog.ts  env.ts  model-aliases.ts  model-resolution.ts  product-role.ts  skill-tracker.ts  tasks-access.ts  workspace.ts
core/ts/session/: copilot-launch.ts
core/ts/state/: index.ts  model.ts
core/ts/workspace/: migrate.ts  repo.ts
observer/: AGENTS.md  CLAUDE.md  MIGRATION_PLAN.md  pyproject.toml
observer/src/observer/: __init__.py  cli.py  constants.py  exceptions.py  search.py
observer/tests/: conftest.py  pi_fixtures.py  test_agent.py  test_agents.py  test_cli.py  test_config.py  test_container.py  test_daemon.py  test_data.py  test_db.py  test_extraction.py  test_indexing.py  test_ingestion.py  test_migrations.py  test_models.py  test_parser.py  test_recall.py  test_refining.py  test_registration.py  test_scoring.py  test_search_engine.py  test_search_server.py
pi-companion/tui/: pyproject.toml
pi-companion/tui/tests/: test_companion_analysis.py  test_companion_analyze_cli.py  test_companion_analyze_cli.py.skip  test_companion_analyzer.py  test_companion_app.py  test_companion_daemon.py  test_companion_dashboard.py  test_companion_diff.py  test_companion_llm.py  test_companion_source.py  test_companion_swarm.py
pi-memory/: biome.json  package-lock.json  package.json  pyproject.toml
pi-memory/extension/src/: index.ts
pi-memory/src/pi_memory/: __init__.py  constants.py  main.py  settings.py
pi-memory/tests/: test_activity_normalization.py  test_app.py  test_backfill.py  test_database.py  test_db_schema_compatibility.py  test_dispatcher.py  test_durable_contracts.py  test_durable_eligibility.py  test_durable_evaluator.py  test_durable_inspection.py  test_durable_packets.py  test_durable_reducer.py  test_durable_relations.py  test_episode_liveness.py  test_episode_manifests.py  test_episode_segmentation.py  test_import.py  test_infra_job_dispatcher.py  test_infra_job_runner.py  test_infra_job_runner_contracts.py  test_infra_llm.py  test_ingest_service.py  test_interpretation_contracts.py  test_interpretation_factory.py  test_interpretation_interpreter.py  test_interpretation_packets.py  test_job_runner.py  test_jobs_observe.py  test_jobs_store.py  test_memory_cli.py  test_memory_projection.py  test_memory_settings.py  test_pipeline_enqueue_specs.py  test_quality_assessor.py  test_quality_contracts.py  test_quality_deterministic.py  test_quality_factory.py  test_quality_packets.py  test_recall_indexing.py  test_recall_search.py  (+9 more)
pi-observer/: biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
pi-observer/extension/src/: index.ts  recall-tool.ts
pi-observer/skills/recall/: SKILL.md
pi-observer/src/pi_observer/: __init__.py  constants.py  exceptions.py  search.py  settings.py  ui.py
pi-observer/tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_data.py  test_db.py  test_extraction.py  test_indexing.py  test_ingestion.py  test_migrations.py  test_models.py  test_parser.py  test_recall.py  test_refining.py  test_registration.py  test_scoring.py  test_search_engine.py
pi-swarm/cli/: README.md  pyproject.toml
pi-swarm/cli/tests/: fake_daemon_agent.py  test_companion_daemon.py  test_daemon_app.py  test_daemon_dispatch.py  test_daemon_frames.py  test_daemon_peer_messages.py  test_daemon_store.py  test_daemon_uds.py  test_installer.py  test_run_result.py  test_runner.py
recall/: pyproject.toml
recall/src/recall/: cli.py
workspace/projects/: pyproject.toml
workspace/projects/tests/: test_environment_cli.py  test_environments.py  test_project_cli.py  test_projects.py
(+2652 files in other folders)
