[project]
name = "basecamp"
version = "0.8.0"
description = "Basecamp — project configuration and workspace management for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "basecamp-core",
    "basecamp-workspace",
    "questionary>=2.1.1",
    "rich",
    "rich-click>=1.8",
]

[project.optional-dependencies]
companion = ["companion-tui"]
swarm = ["pi-swarm"]

[project.scripts]
basecamp = "basecamp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basecamp"]

[dependency-groups]
dev = [
    "companion-tui",
    "ruff~=0.13.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.2.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.2",
]

[tool.uv.workspace]
members = ["core/config", "workspace/projects", "pi-swarm/cli", "pi-companion/tui"]

[tool.uv.sources]
basecamp-core = { workspace = true }
basecamp-workspace = { workspace = true }
companion-tui = { workspace = true }
pi-swarm = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "core/config/tests", "workspace/projects/tests", "pi-companion/tui/tests"]
pythonpath = ["src", "core/config/src", "workspace/projects/src", "pi-swarm/cli/src", "pi-companion/tui/src"]
env = ["TESTING=1"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E", # Pycodestyle
    "W", # Pycodestyle
    "F", # Pyflakes
    "ASYNC", # flake8-async
    "N", # pep8-naming
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "DTZ", # flake8-datetimez
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "FBT", # flake8-boolean-trap
    "I", # isort
    "PLC", # Pylint-Convention
    "PLE", # Pylint-Error
    "PLW", # Pylint-Warning
    "TRY", # tryceratops
    "FAST", # FastAPI
    "C4", # flake8-comprehensions
    "ICN", # import-convention
    "Q", # flake8-quotes
    "ARG", # flake8-unused-arguments
    "PERF", # Perflint
]
