[project]
name = "basecamp"
version = "0.8.0"
description = "Basecamp — project configuration and workspace management for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "pydantic-ai-slim[anthropic,openai]",
    "pygments>=2.0",
    "questionary>=2.1.1",
    "rich>=13.0",
    "rich-click>=1.8",
    "textual>=0.80",
    "tomlkit",
    "uvicorn[standard]>=0.20.0",
]

[project.scripts]
basecamp = "basecamp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `basecamp` is a PEP 420 namespace package assembled from per-context portions
# (docs/design/repo-consolidation.md §6). No portion may contain a
# basecamp/__init__.py — that silently shadows every sibling portion.
[tool.hatch.build.targets.wheel]
packages = [
  "src/basecamp",
  "core/py/basecamp",
  "workspace/py/basecamp",
  "swarm/py/basecamp",
  "companion/py/basecamp",
]
# REQUIRED for editable installs: hatchling's default editable strategy maps by
# package name, so same-named namespace portions collapse to the last root.
dev-mode-dirs = ["src", "core/py", "workspace/py", "swarm/py", "companion/py"]

[dependency-groups]
dev = [
    "ruff~=0.13.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.2.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "core/py/tests", "workspace/py/tests", "swarm/py/tests", "companion/py/tests"]
env = ["TESTING=1"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E", # Pycodestyle
    "W", # Pycodestyle
    "F", # Pyflakes
    "ASYNC", # flake8-async
    "N", # pep8-naming
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "DTZ", # flake8-datetimez
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "FBT", # flake8-boolean-trap
    "I", # isort
    "PLC", # Pylint-Convention
    "PLE", # Pylint-Error
    "PLW", # Pylint-Warning
    "TRY", # tryceratops
    "FAST", # FastAPI
    "C4", # flake8-comprehensions
    "ICN", # import-convention
    "Q", # flake8-quotes
    "ARG", # flake8-unused-arguments
    "PERF", # Perflint
]
