[project]
name = "basecamp"
version = "0.8.0"
description = "Basecamp — project configuration and workspace management for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.27",
    "mcp>=1.2",
    "pydantic>=2.0",
    "pydantic-ai-slim[anthropic,openai]",
    "pygments>=2.0",
    "questionary>=2.1.1",
    "rich>=13.0",
    "rich-click>=1.8",
    "textual>=0.80",
    "uvicorn[standard]>=0.20.0",
]

[project.scripts]
basecamp = "basecamp.cli:main"
bcc = "basecamp.claude.launch:main"
basecamp-mcp = "basecamp.mcp.server:main"
basecamp-hook = "basecamp.hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `basecamp` is one ordinary src-layout package (docs/design/repo-rearchitecture.md);
# the per-context py/ portion roots were centralized under src/basecamp/.
[tool.hatch.build.targets.wheel]
packages = ["src/basecamp"]
dev-mode-dirs = ["src"]

[dependency-groups]
dev = [
    "ruff~=0.13.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = ["TESTING=1"]

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E", # Pycodestyle
    "W", # Pycodestyle
    "F", # Pyflakes
    "ASYNC", # flake8-async
    "N", # pep8-naming
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "DTZ", # flake8-datetimez
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "FBT", # flake8-boolean-trap
    "I", # isort
    "PLC", # Pylint-Convention
    "PLE", # Pylint-Error
    "PLW", # Pylint-Warning
    "TRY", # tryceratops
    "FAST", # FastAPI
    "C4", # flake8-comprehensions
    "ICN", # import-convention
    "Q", # flake8-quotes
    "ARG", # flake8-unused-arguments
    "PERF", # Perflint
]
