[project]
name = "basecamp-observer"
version = "0.1.0"
description = "Background observer daemon for Claude Code session monitoring"
requires-python = ">=3.12"
dependencies = [
    "click~=8.1",
    "pydantic~=2.10",
    "sqlalchemy~=2.0",
    "marimo>=0.10",
    "numpy>=1.26",
    "plotly>=5.0",
    "networkx>=3.0",
    "sentence-transformers>=3.0",
    "pgvector~=0.4.2",
    "psycopg2-binary>=2.9",
"questionary>=2.1.1",
]

[project.scripts]
observer = "observer.cli:main"

[dependency-groups]
dev = ["pytest~=8.0", "pytest-env>=1.0", "testcontainers[postgres]>=4.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_level = "CRITICAL"
env = ["TESTCONTAINERS_RYUK_DISABLED=true"]
