[project]
name = "basecamp-observer"
version = "0.1.0"
description = "Semantic memory for Claude Code sessions — ingestion, extraction, and recall"
requires-python = ">=3.12"
dependencies = [
    "click~=8.1",
    "pydantic~=2.10",
    "pydantic-ai>=1.0",
    "sqlalchemy~=2.0",
    "marimo>=0.10",
    "numpy>=1.26",
    "plotly>=5.0",
    "networkx>=3.0",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
pg-migrate = ["psycopg2-binary>=2.9"]

[project.scripts]
observer = "observer.cli.observer:main"
recall = "observer.cli.recall:main"

[dependency-groups]
dev = ["pytest~=8.0", "pytest-env>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_level = "CRITICAL"
env = []
