[project]
name = "pi-memory"
version = "0.1.0"
description = "Memory service scaffold for Pi coding sessions"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "fastapi>=0.115.0",
    "pydantic-ai>=1.0",
    "sqlalchemy>=2.0.0",
    "textual>=8.2.7",
    "uvicorn>=0.30.0",
]

[project.scripts]
pi-memory = "pi_memory.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-env>=1.2.0",
    "ruff~=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_memory"]
