[project]
name = "pi-observer"
version = "0.8.0"
description = "Semantic memory observer for Pi coding sessions"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "chromadb>=0.5",
    "numpy>=1.26",
    "pydantic>=2.0",
    "questionary>=2.0",
    "pydantic-ai>=1.0",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "sqlalchemy~=2.0",
]

[project.scripts]
pi-observer = "pi_observer.cli.main:main"

[dependency-groups]
dev = [
    "factory-boy>=3.3.0",
    "freezegun>=1.5.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.2.0",
    "pytest-mock>=3.14.0",
    "ruff~=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_observer"]
