[project]
name = "basecamp-recall"
version = "0.1.0"
description = "Semantic memory retrieval CLI for Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "click~=8.1",
    "basecamp-observer",
]

[project.scripts]
recall = "recall.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]
