[project]
name = "basecamp-core"
version = "0.8.0"
description = "Basecamp core — low-level config primitives shared by basecamp packages"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff~=0.13.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/basecamp_core"]
