[project]
name = "companion-tui"
version = "0.1.0"
description = "Basecamp companion TUI — session dashboard, LLM analyzer, and daemon client"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai-slim[anthropic,openai]",
    "pygments>=2.0",
    "rich>=13.0",
    "textual>=0.80",
]

[dependency-groups]
dev = [
    "ruff~=0.13.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-env>=1.2.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/companion_tui"]