[project]
name = "pi-swarm"
version = "0.1.0"
description = "Async-agent daemon runtime and CLI package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_swarm"]
