[project]
name = "pi-swarm"
version = "0.1.0"
description = "Async-agent daemon runtime and CLI package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.20.0",
]

[project.scripts]
bc-swarm = "pi_swarm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_swarm"]
